<resources>
    <string name="app_name">TravelLogger</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="trips">Trips</string>
    <string name="instructions">Instructions</string>
    <string name="about_us">About Us</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_note">Add Note</string>
    <string name="enter_note_1">Enter Note Name: </string>
    <string name="enter_note_2">Enter Note: </string>
    <string name="about_us_content">Travel Logger App \n\n This app serves as a travel journal. User can add notes about their trips and can add trip wishlist \n\n\n\n   Music: bensound_memories.mp3 from \n http://www.bensound.com \n\n\n\n\n\n Developed By: \n\n Jaina Patel \n Khirthana Subramanian \n\n\n\n\n\n UOIT \n Mobile Devices 2016</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="add_trip">Add Trip</string>
    <string name="enter_trip_name">Enter Trip Name: </string>
    <string name="enter_trip_place">Enter Location: </string>
    <string name="notes">Notes</string>
    <string name="wishlist">Wishlist</string>
    <string name="time">Current Date and Time: </string>
    <string name="location">Your Location:</string>
    <string name="country">Country</string>
    <string name="city">City</string>


    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="title_activity_nav">nav</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="submit">Add Destination</string>
</resources>
