<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_notes"
            android:title="@string/notes" />


        <item
            android:id="@+id/nav_wishist"
            android:title="@string/wishlist" />


    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_instructions"
                android:title="@string/instructions" />
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/about_us" />

            <item
                android:id="@+id/nav_settings"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>


